# Game

./: .gitignore  CMakeLists.txt
assets/: lit.mat
src/: main.cpp
